fix: overlap is removed

--- a/CSS/Kgk2btTablesS21.css
+++ b/CSS/Kgk2btTablesS21.css
@@ -20,7 +20,7 @@
 }
 
 .row {
-    padding-top: 5em;
+    padding-top: 1em;
 }
 
 #professionalPic {
